# selina-audio

./: asr.py  markers.py  pyproject.toml  server.py  start.sh  tts.py
voices/: selina_de.txt  selina_en.txt
