[project]
name = "selina-audio"
version = "0.2.0"
description = "Local ASR + TTS service for Selina (faster-whisper + Qwen3-TTS)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "faster-whisper>=1.1.0",
    "qwen-tts>=0.1.0",
    "torch>=2.5.0",
    "soundfile>=0.13.0",
    "numpy>=2.0.0",
    "python-multipart>=0.0.18",
]
